--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,3 +15,7 @@ pytest==8.3.0
 pytest-asyncio==0.24.0
 black==24.10.0
 flake8==7.1.0
+
+langchain==0.1.0
+langchain-anthropic==0.1.0
+langchain-community==0.0.13
